# ProgPraktikum-TSP

./: .gitignore
EinfAufgabe/: CMakeLists.txt  graph.cpp  graph.hpp  main.cpp  tour.cpp  tour.hpp  tspsolvers.cpp  tspsolvers.hpp  union_find.cpp  union_find.hpp
HauptAufgabe/: CMakeLists.txt
HauptAufgabe/format_tests/: data_and_type.tsp  data_and_type_2.tsp  duplicate_data.tsp  duplicate_keys.tsp  empties.tsp  empty_nodes.tsp  ewsection_function.tsp  few_nodes.tsp  inv_edge_format.tsp  inv_edge_type.tsp  many_nodes.tsp  many_nodes_2.tsp  many_nodes_even.tsp  no_distance.tsp  no_name.tsp  nodec_before_dim.tsp  non_tsp.tsp
HauptAufgabe/include/: blossom_finder.hpp  branch_and_cut.hpp  comb_cut_gen.hpp  comb_heuristic.hpp  connectivity_cut_gen.hpp  contraction_rule.hpp  cut_generator.hpp  linear_program.hpp  one_tree.hpp  relative_tolerance.hpp  simple_comb_cut_gen.hpp  subtour_cut_gen.hpp  tsp_instance.hpp  tsp_lp_data.hpp  tsp_solution.hpp  tsp_solvers.hpp  tsp_utils.hpp  two_matching_cut_gen.hpp  union_find.hpp  variable_remover.hpp
HauptAufgabe/include/lemon_fixes/: nagamochi_ibaraki.h
HauptAufgabe/special_tests/: large_weights.tsp  test_3.tsp  test_4.tsp  test_5.tsp
HauptAufgabe/src/: linkern_to_lib.cpp  main.cpp  union_find.cpp
HauptAufgabe/src/lp/: branch_and_cut.cpp  linear_program.cpp
HauptAufgabe/src/misc/: relative_tolerance.cpp  tsp_utils.cpp  union_find.cpp
HauptAufgabe/src/tests/: branch_bound_test.cpp  broken_file_test.cpp  comb_test.cpp  cut_test.cpp  one_tree_test.cpp  special_tests.cpp  subtour_test.cpp  tsp_no_matching.cpp  tsp_test.cpp  two_matching_sim.cpp
HauptAufgabe/src/tsp/: comb_cut_gen.cpp  connectivity_cut_gen.cpp  one_tree.cpp  subtour_cut_gen.cpp  tsp_instance.cpp  tsp_lp_data.cpp  tsp_solution.cpp  tsp_solvers.cpp  two_matching_cut_gen.cpp
HauptAufgabe/src/tsp/2matching/: blossom_finder.cpp  two_matching_cut_gen.cpp
HauptAufgabe/src/tsp/combs/: comb_cut_gen.cpp  comb_heuristic.cpp  contraction_rule.cpp  simple_comb_cut_gen.cpp
HauptAufgabe/src/tsp/subtours/: connectivity_cut_gen.cpp  subtour_cut_gen.cpp
